updated case study with new tools io and native methods